--- a/Documentation/report.tex
+++ b/Documentation/report.tex
@@ -47,14 +47,30 @@ en vérifiant à bien avoir installé au préalable le système de contrôle de 
 \subsection{Implémentation Pipe}
 vide
 \subsection{Implémentation Network}
-vide
+La toute première implémentation de Network que l'on a réalisé était assez
+peu performante: On avait considéré que les put et les get étaient des
+requêtes à un serveur représentant le channel. Le problème de performance
+était au niveau de l'implémentation: chaque \verb!put! et \verb!get! utilisait
+\verb!connect! pour se connecter au serveur, puis une fois le put et get
+terminé, on fermais le socket. Des problèmes sont apparus dûs au fait que l'on réalisait
+un grand nombre de connections par secondes. Les problèmes ont été résolus
+en paramétrant les options des sockets,
+mais l'implémentation était vraiment lente.
+
+Finalement au lieu d'améliorer cette implémentation en gardant les
+connections actives, et donc en évitant de refaire des connections à chaque
+put et get, nous sommes partis sur un tout autre concept permettant
+d'utiliser vraiment plusieurs machines du réseau, au lieu d'utiliser le
+réseau local de notre ordinateur.
 \subsection{implémentation Sequential}
-Notre première approche a été de considerer qu'un processus pouvait soit terminer, soit rendre la main sans avoir terminer. Dans cette implémentation, les processus avaient le type \verb!'a process = ('a->unit)->Status! avec \verb!Status! indiquant si le processus avait terminé, ou s'il fallait le rappeler. Doco devait donc appeler un à un les processus et en fonction du résultat renvoyé, savait s'il fallait rappeler le processus plus tard ou pas. 
-Le problème de cette implémentation se situait au niveau de bind: bind devait au premier appel exécuter le processus e et conserver son résultat, puis au second appel exécuter e' avec le résultat conservé, mais surtout, il devait aux appels suivant conserver les modifications appliquées à e' (qui à chaque appel pouvait évoluer). Par exemple si l'on execute le process integers de l'exemple donné, après 2n appels au process, on se retrouve à n appels de bind imbriqués. La complexité de l'implémentation était en O($n^2$), ce qui n'était pas satisfaisant.
+Notre première approche a été de considerer qu'un processus pouvait soit
+terminer, soit rendre la main sans avoir terminé. Dans cette
+implémentation, les processus avaient le type \verb!'a process = ('a -> unit) -> Status! avec \verb!Status! indiquant si le processus avait terminé, ou s'il fallait le rappeler. \verb!doco! devait donc appeler un à un les processus et en fonction du résultat renvoyé, savait s'il fallait rappeler le processus plus tard ou pas. 
+Le problème de cette implémentation se situait au niveau de \verb!bind!: \verb!bind! devait au premier appel exécuter le processus \verb!e! et conserver son résultat, puis au second appel exécuter \verb!e'! avec le résultat conservé, mais surtout, il devait aux appels suivant conserver les modifications appliquées à \verb!e'! (qui à chaque appel pouvait évoluer). Par exemple si l'on execute le process \verb!integers! de l'exemple donné, après 2n appels au process, on se retrouve à n appels de \verb!bind! imbriqués. La complexité de l'implémentation était en O($n^2$), ce qui n'était pas satisfaisant.
 
 Pour améliorer l'implémentation, le retour des fonctions a été remplacé par une exception à lever si le programme devait être rappelé. Le programme s'exécutait plus rapidement, mais la complexité était toujours en O($n^2$).
 
-Finalement cette dernière implémentation a été améliorée pour renvoyer lors de l'exception la fonction permettant d'exécuter la suite du processus. Doco faisait pas la suite appel à cette fonction et non pas au processus initial qui avait été modifié. Il n'y a donc plus le problème d'appels imbriqués et la complexité est linéaire.
+Finalement cette dernière implémentation a été améliorée pour renvoyer lors de l'exception la fonction permettant d'exécuter la suite du processus. \verb!doco! faisait pas la suite appel à cette fonction et non pas au processus initial qui avait été modifié. Il n'y a donc plus le problème d'appels imbriqués et la complexité est linéaire.
 
 Lors de nos tests, la vitesse de cette implémentation était très proche de celle de pipe.
 
